--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <br><br>
 	Ethuverazhin has a number of aspirated consonants. <i>Ch</i> is pronounced as in “churn”; <i>kh</i> is pronounced rather like a cough in the back of the throat. <i>Th</i> is pronounced as in “theater.” <i>Sh</i> is pronounced as in “show.” <i>Zh</i> is pronounced more or less like a slurred j.
 <br><br>
-	The consonant <i>c</i> is always hard (in Barizhin, a <i>k</i> is typically used in place of a hard <i>c</i>), and the consonant pair <i>cs</i> should be pronounced, as best as possible, as a hard c and s elided together.</p>
+	The consonant <i>c</i> is always hard (in Barizhin, a <i>k</i> is typically used in place of a hard <i>c</i>), and the consonant pair <i>cs</i> should be pronounced, as best as possible, as a hard <i>c</i> and <i>s</i> elided together.</p>
 
 	<h3>NAMES</h3>
 
