--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
 <!-- partial:index.partial.html -->
 <h1>Known Shores Name Generator</h1>
 <div class="row">
-  <div class="column gender">
+  <div class="column">
     <h3>Gender</h3>
-    <input type="checkbox" id="gender1" name="gender1" value="mountain">
+    <input type="checkbox" id="gender1" name="gender" value="mountain">
     <label for="gender1"> Mountain</label><br>
-    <input type="checkbox" id="gender2" name="gender2" value="forest">
+    <input type="checkbox" id="gender2" name="gender" value="forest">
     <label for="gender2"> Forest</label><br>
-    <input type="checkbox" id="gender3" name="gender3" value="sky">
+    <input type="checkbox" id="gender3" name="gender" value="sky">
     <label for="gender3"> Sky</label><br><br>
   </div>
   
-  <div class="column vibe">
+  <div class="column">
     <h3>Vibe</h3>
-    <input type="checkbox" id="vibe1" name="vibe1" value="femme">
+    <input type="checkbox" id="vibe1" name="vibe" value="femme">
     <label for="vibe1"> Femme</label><br>
-    <input type="checkbox" id="vibe2" name="vibe2" value="masc">
+    <input type="checkbox" id="vibe2" name="vibe" value="masc">
     <label for="vibe2"> Masc</label><br>
-    <input type="checkbox" id="vibe3" name="vibe3" value="fluid">
+    <input type="checkbox" id="vibe3" name="vibe" value="fluid">
     <label for="vibe3"> Fluid/All</label><br>
   </div>
   
-  <div class="column stage">
+  <div class="column">
     <h3>Lifestage</h3>
-    <input type="checkbox" id="stage1" name="stage1" value="adult">
+    <input type="checkbox" id="stage1" name="stage" value="adult">
     <label for="stage1"> Adult</label><br>
-    <input type="checkbox" id="stage2" name="stage2" value="parent">
+    <input type="checkbox" id="stage2" name="stage" value="parent">
     <label for="stage2"> Parent</label><br><br>
-    <input type="checkbox" id="stage3" name="stage3" value="child">
+    <input type="checkbox" id="stage3" name="stage" value="child">
     <label for="stage3"> Child</label><br><br>
     </div>  
 </div>
