--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- partial:index.partial.html -->
 <h1>Known Shores Name Generator</h1>
 <div class="row">
-  <div class="column">
+  <div class="column gender">
     <h3>Gender</h3>
     <input type="checkbox" id="gender1" name="gender" value="mountain">
     <label for="gender1"> Mountain</label><br>
@@ -20,7 +20,7 @@
     <label for="gender3"> Sky</label><br><br>
   </div>
   
-  <div class="column">
+  <div class="column vibe">
     <h3>Vibe</h3>
     <input type="checkbox" id="vibe1" name="vibe" value="femme">
     <label for="vibe1"> Femme</label><br>
@@ -30,7 +30,7 @@
     <label for="vibe3"> Fluid/All</label><br>
   </div>
   
-  <div class="column">
+  <div class="column stage">
     <h3>Lifestage</h3>
     <input type="checkbox" id="stage1" name="stage" value="adult">
     <label for="stage1"> Adult</label><br>
