--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="./style.css">
 
 </head>
-<body>
+<main>
 <!-- partial:index.partial.html -->
 <h1>Known Shores Name Generator</h1>
-<div class="row">
+<section>
   <div class="column">
     <h3>Gender</h3>
     <input type="checkbox" id="gender1" name="gender" value="mountain">
@@ -39,39 +39,53 @@
     <input type="checkbox" id="stage3" name="stage" value="child">
     <label for="stage3"> Child</label><br><br>
     </div>  
-</div>
+</section>
 
-<div class = "row generate">
-    <br><button onclick="parseName()">Generate</button>
-</div>
-<div class = "row generate output">
-	<p id="results" style="display:none">text</p>
-</div>
+<section class = "generate">
+	<br><button onclick="parseName()">Generate</button>
+	<div class = "output">
+		<p id="results" style="display:none">text</p>
+	</div>
+</section>
 	
-<div class = "row"> 
+<article> 
 	<h2>ETHUVERAZHIN and BARAZHIN PRONUNCIATION</h2>
-
-<p>There are no silent letters in Ethuverazhin and its sister language, Barizhin. Two vowels written together signify length, unless the second vowel carries an umlaut, in which case, they are to be pronounced separately. <i>Ai</i> is the vowel of “line”; <i>ei</i> is the vowel of “lane”; <i>ee</i> is the vowel of “lean.”
-<br><br>
-	Ethuverazhin has a number of aspirated consonants. <i>Ch</i> is pronounced as in “churn”; <i>kh</i> is pronounced rather like a cough in the back of the throat. <i>Th</i> is pronounced as in “theater.” <i>Sh</i> is pronounced as in “show.” <i>Zh</i> is pronounced more or less like a slurred j.
-<br><br>
-	The consonant <i>c</i> is always hard (in Barizhin, a <i>k</i> is typically used in place of a hard <i>c</i>), and the consonant pair <i>cs</i> should be pronounced, as best as possible, as a hard <i>c</i> and <i>s</i> elided together.</p>
+	<p>
+		There are no silent letters in Ethuverazhin and its sister language, Barizhin. Two vowels written together signify length, unless the second vowel carries an umlaut, in which case, they are to be pronounced separately. <i>Ai</i> is the vowel of “line”; <i>ei</i> is the vowel of “lane”; <i>ee</i> is the vowel of “lean.”
+		<br><br>
+		Ethuverazhin has a number of aspirated consonants. <i>Ch</i> is pronounced as in “churn”; <i>kh</i> is pronounced rather like a cough in the back of the throat. <i>Th</i> is pronounced as in “theater.” <i>Sh</i> is pronounced as in “show.” <i>Zh</i> is pronounced more or less like a slurred j.
+		<br><br>
+		The consonant <i>c</i> is always hard (in Barizhin, a <i>k</i> is typically used in place of a hard <i>c</i>), and the consonant pair <i>cs</i> should be pronounced, as best as possible, as a hard <i>c</i> and <i>s</i> elided together.
+	</p>
 
 	<h3>NAMES</h3>
-
-	<p><b>Personal names</b> are marked by gender, of which there are three main groupings: mountain, forest, and sky. <br>
-	<ul><b>Mountain masculine</b> names end in <i>-a, -is</i> and <i>-u</i>. <br><b>Mountain feminine</b> names end in <i>-o, -an</i> and <i>-u</i>. <br><b>Forest masculine</b> names end in <i>-ee</i> (pronounced as the vowel in lean), <i>-ezha</i> and <i>-et</i>. <br><b>Forest feminine</b> names end in <i>-er, -ezho</i> and <i>-et</i>. <br><b>Sky</b> names universally end in <i>-el, -u</i> and <i>-et</i>. <br><b>Children’s</b> names often—though not always—end in <i>-eth</i>.
+	<p>
+		<b>Personal names</b> are marked by gender, of which there are three main groupings: mountain, forest, and sky. <br>
+	</p>
+	<ul>
+		<li><b>Mountain masculine</b> names end in <i>-a, -is</i> and <i>-u</i>. </li> 
+		<li><b>Mountain feminine</b> names end in <i>-o, -an</i> and <i>-u</i>. </li>
+		<li><br><b>Forest masculine</b> names end in <i>-ee</i> (pronounced as the vowel in lean), <i>-ezha</i> and <i>-et</i>. </li>
+		<li><br><b>Forest feminine</b> names end in <i>-er, -ezho</i> and <i>-et</i>. </li>
+		<li><br><b>Sky</b> names universally end in <i>-el, -u</i> and <i>-et</i>. </li>
+		<li><br><b>Children’s</b> names often—though not always—end in <i>-eth</i>. </li>
 	</ul>
-<br>
-In the Ethuveraz, personal names are almost always pronounced with stress on the first syllable. In Barizhan, stress tends to fall on the second syllable.
-<br><br>
-Ethuverazhins almost always keep their root personal names throughout their whole lives, though suffixes may change based on gender expression or personal preference. Some folks with fluid genders will frequently change their gender suffixes, or will use several interchangeably. This is viewed as entirely normal and accepted.
-<br><br>
-	<b>Family names</b> are of paramount importance to people of the Ethuveraz and Barizhan. Each family name is a root to which suffixes are added to mark gender and parental status. Masculine-aligned folks use the suffix <i>-ar</i> (<i>-aran</i> if they have children); feminine-aligned folks use <i>-el</i> (<i>-elan</i> if they have children); gender-neutral or fluid folks use <i>-ezh</i> (<i>-ezhan</i> if they have children). Children not yet of age use the suffix <i>-in</i>. The suffix <i>-ada</i> is affixed to the root to signify the entire family group.</p>
+	<p>
+		In the Ethuveraz, personal names are almost always pronounced with stress on the first syllable. In Barizhan, stress tends to fall on the second syllable.
+		<br><br>
+		Ethuverazhins almost always keep their root personal names throughout their whole lives, though suffixes may change based on gender expression or personal preference. Some folks with fluid genders will frequently change their gender suffixes, or will use several interchangeably. This is viewed as entirely normal and accepted.
+		<br><br>
+		<b>Family names</b> are of paramount importance to people of the Ethuveraz and Barizhan. Each family name is a root to which suffixes are added to mark gender and parental status. Masculine-aligned folks use the suffix <i>-ar</i> (<i>-aran</i> if they have children); feminine-aligned folks use <i>-el</i> (<i>-elan</i> if they have children); gender-neutral or fluid folks use <i>-ezh</i> (<i>-ezhan</i> if they have children). Children not yet of age use the suffix <i>-in</i>. The suffix <i>-ada</i> is affixed to the root to signify the entire family group.
+	</p>
 
-</div>
+</article>
+
+<br>
+<footer>
+	<p>Created by Rowan Potter 2023</p>
+</footer>
 <!-- partial -->
   <script  src="./script.js"></script>
 
-</body>
+</main>
 </html>
