Cleanup index.html
explainer text in header
remove double line break before child
fix list items

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <main>
 <!-- partial:index.partial.html -->
-<h1>Known Shores Name Generator</h1>
+<header>
+	<h1>Known Shores Name Generator</h1>
+	<p>Clicking "Generate" will generate a list of 5 names using any of the checked options.<br>If a section (e.g. Gender) is left blank, it will be treated as if all options are checked.</p>
+</header>
 <section>
   <div class="column">
     <h3>Gender</h3>
@@ -35,7 +38,7 @@
     <input type="checkbox" id="stage1" name="stage" value="adult">
     <label for="stage1"> Adult</label><br>
     <input type="checkbox" id="stage2" name="stage" value="parent">
-    <label for="stage2"> Parent</label><br><br>
+    <label for="stage2"> Parent</label><br>
     <input type="checkbox" id="stage3" name="stage" value="child">
     <label for="stage3"> Child</label><br><br>
     </div>  
@@ -65,10 +68,10 @@
 	<ul>
 		<li><b>Mountain masculine</b> names end in <i>-a, -is</i> and <i>-u</i>. </li> 
 		<li><b>Mountain feminine</b> names end in <i>-o, -an</i> and <i>-u</i>. </li>
-		<li><br><b>Forest masculine</b> names end in <i>-ee</i> (pronounced as the vowel in lean), <i>-ezha</i> and <i>-et</i>. </li>
-		<li><br><b>Forest feminine</b> names end in <i>-er, -ezho</i> and <i>-et</i>. </li>
-		<li><br><b>Sky</b> names universally end in <i>-el, -u</i> and <i>-et</i>. </li>
-		<li><br><b>Children’s</b> names often—though not always—end in <i>-eth</i>. </li>
+		<li><b>Forest masculine</b> names end in <i>-ee</i> (pronounced as the vowel in lean), <i>-ezha</i> and <i>-et</i>. </li>
+		<li><b>Forest feminine</b> names end in <i>-er, -ezho</i> and <i>-et</i>. </li>
+		<li><b>Sky</b> names universally end in <i>-el, -u</i> and <i>-et</i>. </li>
+		<li><b>Children’s</b> names often—though not always—end in <i>-eth</i>. </li>
 	</ul>
 	<p>
 		In the Ethuveraz, personal names are almost always pronounced with stress on the first syllable. In Barizhan, stress tends to fall on the second syllable.
