Center header h1 index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <main>
 <!-- partial:index.partial.html -->
 <header>
-	<h1>Known Shores Name Generator</h1>
+	<h1 style="text-align:center">Known Shores Name Generator</h1>
 	<p>Clicking "Generate" will generate a list of 5 names using any of the checked options.<br>If a section (e.g. Gender) is left blank, it will be treated as if all options are checked.</p>
 </header>
 <section>
