--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <main>
 <!-- partial:index.partial.html -->
 <header>
-	<h1>Known Shores Name Generator</h1>
-	<p>Clicking "Generate" will generate a list of 5 names using any of the checked options.<br>If a section (e.g. Gender) is left blank, it will be treated as if all options are checked.</p>
+	<h1 style="text-align:center">Known Shores Name Generator</h1>
+	<p>Clicking "Generate" will generate a list of 5 names from the checked options. If a section is left blank, it will behave as if all options are checked.</p>
 </header>
 <section>
   <div class="column">
@@ -30,7 +30,7 @@
     <input type="checkbox" id="vibe2" name="vibe" value="masc">
     <label for="vibe2"> Masc</label><br>
     <input type="checkbox" id="vibe3" name="vibe" value="fluid">
-    <label for="vibe3"> Fluid/All</label><br>
+    <label for="vibe3"> Fluid/All</label><br><br>
   </div>
   
   <div class="column stage">
