add class "row" to section index.html
remove extraneous line breaks to be handled with padding in flex boxes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h1 style="text-align:center">Known Shores Name Generator</h1>
 	<p>Clicking "Generate" will generate a list of 5 names from the checked options. If a section is left blank, it will behave as if all options are checked.</p>
 </header>
-<section>
+<section class="row">
   <div class="column">
     <h3>Gender</h3>
     <input type="checkbox" id="gender1" name="gender" value="mountain">
@@ -20,7 +20,7 @@
     <input type="checkbox" id="gender2" name="gender" value="forest">
     <label for="gender2"> Forest</label><br>
     <input type="checkbox" id="gender3" name="gender" value="sky">
-    <label for="gender3"> Sky</label><br><br>
+    <label for="gender3"> Sky</label><br>
   </div>
   
   <div class="column vibe">
@@ -30,7 +30,7 @@
     <input type="checkbox" id="vibe2" name="vibe" value="masc">
     <label for="vibe2"> Masc</label><br>
     <input type="checkbox" id="vibe3" name="vibe" value="fluid">
-    <label for="vibe3"> Fluid/All</label><br><br>
+    <label for="vibe3"> Fluid/All</label><br>
   </div>
   
   <div class="column stage">
@@ -40,7 +40,7 @@
     <input type="checkbox" id="stage2" name="stage" value="parent">
     <label for="stage2"> Parent</label><br>
     <input type="checkbox" id="stage3" name="stage" value="child">
-    <label for="stage3"> Child</label><br><br>
+    <label for="stage3"> Child</label><br>
     </div>  
 </section>
 
