--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <label for="gender3"> Sky</label><br>
   </div>
   
-  <div class="column vibe">
+  <div class="column">
     <h3>Vibe</h3>
     <input type="checkbox" id="vibe1" name="vibe" value="femme">
     <label for="vibe1"> Femme</label><br>
@@ -33,7 +33,7 @@
     <label for="vibe3"> Fluid/All</label><br>
   </div>
   
-  <div class="column stage">
+  <div class="column">
     <h3>Lifestage</h3>
     <input type="checkbox" id="stage1" name="stage" value="adult">
     <label for="stage1"> Adult</label><br>
@@ -45,7 +45,7 @@
 </section>
 
 <section class = "generate">
-	<br><button onclick="parseName()">Generate</button>
+	<br><button onclick="parseName()">Generate</button><br>
 	<div class = "output">
 		<p id="results" style="display:none">text</p>
 	</div>
